Local changes that may conflict with the last commit

--- a/F6-resume-02-2016/index.html
+++ b/F6-resume-02-2016/index.html
@@ -187,6 +187,9 @@
       <div class="columns small-12 medium-4">
         
       </div>
+      <div class="columns small 12 cr">
+        <p>Copyright&copy; <script>document.write(new Date().getFullYear())</script>. mikerai.</p>
+      </div>
       <a href="#0" class="cd-top">Top</a>
     </footer>
 
