Enhancements and footer work

--- a/F6-resume-02-2016/index.html
+++ b/F6-resume-02-2016/index.html
@@ -15,7 +15,7 @@
       <div class="columns medium-2"><a href="#skills">Skills</a></div>
       <div class="columns medium-2"><a href="#education">Education</a></div>
       <div class="columns medium-2"><a href="#portfolio">Portfolio</a></div>
-      <div class="columns medium-2"><a href="#contact">Contact</a></div>
+      <div class="columns medium-2"><a href="#contact">Contact me</a></div>
     </nav>
 
     <section class="row hero expanded align-middle" id="home">
@@ -181,11 +181,20 @@
         
       </div>
       <div class="columns small-12 medium-4 text-center">
+        <h4 class="pb15">You can follow me on twitter</h4>
         <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/mikerai_UX" data-widget-id="534906066828419073">Tweets by @mikerai_UX</a>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
       </div>
       <div class="columns small-12 medium-4">
-        
+        <ul>
+          <li class="q-links">Quick Links</li>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#resume">Resume</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#education">Education</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#contact">Contact me</a></li>
+        </ul>
       </div>
       <div class="columns small 12 cr">
         <p>Copyright&copy; <script>document.write(new Date().getFullYear())</script>. mikerai.</p>
