--- a/F6-resume-02-2016/index.html
+++ b/F6-resume-02-2016/index.html
@@ -9,18 +9,29 @@
   </head>
   <body>
 
-    <nav class="row collapse expanded align-justify" id="menu">
-      <div class="columns medium-2"><a href="#home">Home</a></div>
-      <div class="columns medium-2"><a href="#resume">Resume</a></div>   
-      <div class="columns medium-2"><a href="#skills">Skills</a></div>
-      <div class="columns medium-2"><a href="#education">Education</a></div>
-      <div class="columns medium-2"><a href="#portfolio">Portfolio</a></div>
-      <div class="columns medium-2"><a href="#contact">Contact me</a></div>
-    </nav>
+    <header id="ha-header" class="row expanded ha-header ha-header-small">
+      <div class="ha-header-perspective">
+        <div class="ha-header-front">
+          <nav>
+           <p><span>I design beautiful and engaging user experiences for the web</span></p>
+          </nav>
+        </div>
+        <div class="ha-header-bottom">
+          <nav>
+            <a href="#home">Home</a>
+            <a href="#resume">Resume</a>
+            <a href="#skills">Skills</a>
+            <a href="#education">Education</a>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#contact">Contact me</a>
+          </nav>
+        </div>
+      </div>
+    </header>
 
-    <section class="row hero expanded align-middle" id="home">
+    <section class="row hero expanded" id="home">
       <div id="parallax-bg"></div>
-        <article class="row hero-content align-middle">
+        <article class="row hero-content">
           <div class="row column small-12">
             <div class="columns b1"></div>
             <div class="columns b2"></div>
@@ -32,27 +43,28 @@
             <h1>Miguel Angel Rodr&iacute;guez Alvarez Icaza</h1>
           </div>
           <div class="columns small-12">
+            <h2>Certified Six Sigma Green Belt</h2>
+            <span>&amp;</span>
             <h2>UI:UX Specialist</h2>
           </div>
           <div class="columns small-12">
-            <p>I design beautiful and engaging user experiences for the web</p>
             <a href="#contact" class="hollow large button">Contact me</a>
           </div>
       </article>
     </section>
 
-    <section class="row resume align-middle" id="resume">
+    <section class="row resume ha-waypoint" id="resume" data-animate-down="ha-header-rotate" data-animate-up="ha-header-small">
       <div class="small-12 columns">
         <h3>Work History</h3>
       </div>
-      <div class="columns small-12 medium-7 large-8">
+      <div class="columns align-self-middle small-12 medium-7 large-8">
         <article class="row column small-uncollapse medium-collapse">
           <div class="columns small-12">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore est provident asperiores eligendi nesciunt, atque reiciendis magni repudiandae numquam modi eos explicabo eaque doloremque, fugit dolores officia. Voluptatibus ullam, iure?</p>
           </div>
         </article>
       </div>
-      <div class="columns medium-5 large-4 linkedin">
+      <div class="columns align-self-middle medium-5 large-4 linkedin">
         <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
         <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/mikerai" data-format="inline" data-related="false" data-width="300"></script>
       </div>
@@ -95,17 +107,6 @@
           <p>Mechanical and Electrical Engineering.</p>
         </div>
       </article>
-      <article class="row column small-12 align-middle">
-        <div class="columns small-4 medium-5">
-          <img src="img/unadm.png" alt="Universidad Abierta y a Distancia de Mexico" title="Universidad Abierta y a Distancia de Mexico">
-        </div>
-        <div class="columns small-8 medium-7">
-          <h4>Bachelor of Engineering. <i>In Progress</i></h4>
-          <p>UNADM</p>
-          <p>2015 - 2018</p>
-          <p>Computer Science Engineering.</p>
-        </div>
-      </article>
     </section> 
 
     <section class="row tools" id="tools">
@@ -114,22 +115,22 @@
       </div>
     </section>
 
-    <section class="row align-middle portfolio" id="portfolio">
-      <div class="columns small-12">
+    <section class="row portfolio" id="portfolio">
+      <div class="column align-self-middle small-12">
         <h3>This is what I have done</h3>
       </div>
-      <div class="columns small-6 medium-3 text-center mtb15"><a href="http://shopmyexchange.com" target="_blank"><img src="img/exchange.png" alt="Shop my Exchange online store" title="Air Force and Army Exchange Service"></a></div>
-      <div class="columns small-6 medium-3 text-center mtb15"><a href="http://mynavyexchange.com" target="_blank"><img src="img/nexcom.png" alt="Navy Exchange online store" title="US Navy Exchange Service"></a></div>
-      <div class="columns small-6 medium-3 text-center mtb15"><a href="http://shopjustice.com" target="_blank"><img src="img/justice.png" alt="Justice online store" title="Justice clothes online store"></a></div>
-      <div class="columns small-6 medium-3 text-center mtb15"><a href="http://gethuawei.com" target="_blank"><img src="img/huawei.png" alt="Huawei online store" title="Mobile phones and accessories from Huawei"></a></div>
-      <div class="columns small-6 medium-3 text-center mtb15"><a href="http://lowes.com.mx" target="_blank"><img src="img/lowes.png" alt="Lowe's online store" title="Lowe's online store on Mexico"></a></div>
-      <div class="columns small-6 medium-3 text-center mtb15"><a href="http://lenox.com" target="_blank"><img src="img/lenox.png" alt="Lenox online store" title="Lenox online store"></a></div>
-      <div class="columns small-6 medium-3 text-center mtb15"><a href="http://www.toysrus.co.uk/" target="_blank"><img src="img/tru.png" alt="Toys R Us and Babies R Us online store" title="Toys R Us and Babies R Us online store for the UK"></a></div>
-      <div class="columns small-6 medium-3 text-center mtb15"><a href="http://dressbarn.com" target="_blank"><img src="img/dressbarn.png" alt="Dressbarn and dressbar online store" title="Dressbarn and dressbar online store"></a></div>
-      <div class="columns small-6 medium-3 text-center mtb15"><a href="http://naturalpartners.com" target="_blank"><img src="img/natural_partners.png" alt="Natural Partners online store" title="Natural Partners online store"></a></div>
-      <div class="columns small-6 medium-3 text-center mtb15"><a href="http://rodiles.com.mx" target="_blank"><img src="img/rodiles.png" alt="Rodiles de Mexico corporate site" title="Rodiles de Mexico corporate site"></a></div>
-      <div class="columns small-6 medium-3 text-center mtb15"><a href="http://gruponafa.com" target="_blank"><img src="img/nafa.png" alt="Grupo Nafa corporate site" title="Grupo Nafa corporate site"></a></div>
-      <div class="columns small-6 medium-3 text-center mtb15"><a href="http://workngear.com" target="_blank"><img src="img/workngear.png" alt="Work N Gear online store" title="Work N Gear online store"></a></div>
+      <div class="column align-self-middle small-6 medium-3 text-center mtb15"><a href="http://shopmyexchange.com" target="_blank"><img src="img/exchange.png" alt="Shop my Exchange online store" title="Air Force and Army Exchange Service"></a></div>
+      <div class="column align-self-middle small-6 medium-3 text-center mtb15"><a href="http://mynavyexchange.com" target="_blank"><img src="img/nexcom.png" alt="Navy Exchange online store" title="US Navy Exchange Service"></a></div>
+      <div class="column align-self-middle small-6 medium-3 text-center mtb15"><a href="http://shopjustice.com" target="_blank"><img src="img/justice.png" alt="Justice online store" title="Justice clothes online store"></a></div>
+      <div class="column align-self-middle small-6 medium-3 text-center mtb15"><a href="http://gethuawei.com" target="_blank"><img src="img/huawei.png" alt="Huawei online store" title="Mobile phones and accessories from Huawei"></a></div>
+      <div class="column align-self-middle small-6 medium-3 text-center mtb15"><a href="http://lowes.com.mx" target="_blank"><img src="img/lowes.png" alt="Lowe's online store" title="Lowe's online store on Mexico"></a></div>
+      <div class="column align-self-middle small-6 medium-3 text-center mtb15"><a href="http://lenox.com" target="_blank"><img src="img/lenox.png" alt="Lenox online store" title="Lenox online store"></a></div>
+      <div class="column align-self-middle small-6 medium-3 text-center mtb15"><a href="http://www.toysrus.co.uk/" target="_blank"><img src="img/tru.png" alt="Toys R Us and Babies R Us online store" title="Toys R Us and Babies R Us online store for the UK"></a></div>
+      <div class="column align-self-middle small-6 medium-3 text-center mtb15"><a href="http://dressbarn.com" target="_blank"><img src="img/dressbarn.png" alt="Dressbarn and dressbar online store" title="Dressbarn and dressbar online store"></a></div>
+      <div class="column align-self-middle small-6 medium-3 text-center mtb15"><a href="http://naturalpartners.com" target="_blank"><img src="img/natural_partners.png" alt="Natural Partners online store" title="Natural Partners online store"></a></div>
+      <div class="column align-self-middle small-6 medium-3 text-center mtb15"><a href="http://rodiles.com.mx" target="_blank"><img src="img/rodiles.png" alt="Rodiles de Mexico corporate site" title="Rodiles de Mexico corporate site"></a></div>
+      <div class="column align-self-middle small-6 medium-3 text-center mtb15"><a href="http://gruponafa.com" target="_blank"><img src="img/nafa.png" alt="Grupo Nafa corporate site" title="Grupo Nafa corporate site"></a></div>
+      <div class="column align-self-middle small-6 medium-3 text-center mtb15"><a href="http://workngear.com" target="_blank"><img src="img/workngear.png" alt="Work N Gear online store" title="Work N Gear online store"></a></div>
     </section>
 
     <section class="row expanded contact" id="contact">
@@ -207,5 +208,23 @@
     <script src="bower_components/foundation-sites/dist/foundation.min.js"></script>
     <script src="bower_components/foundation-sites/js/foundation.util.mediaQuery.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/header.js"></script>
+    <script>
+      var $head = $( '#ha-header' );
+      $( '.ha-waypoint' ).each( function(i) {
+        var $el = $( this ),
+          animClassDown = $el.data( 'animateDown' ),
+          animClassUp = $el.data( 'animateUp' );
+
+        $el.waypoint( function( direction ) {
+          if( direction === 'down' && animClassDown ) {
+            $head.attr('class', 'ha-header ' + animClassDown);
+          }
+          else if( direction === 'up' && animClassUp ){
+            $head.attr('class', 'ha-header ' + animClassUp);
+          }
+        }, { offset: '100%' } );
+      } );
+    </script>
   </body>
 </html>
