Minor improvements... almost nothing changed

--- a/F6-resume-02-2016/index.html
+++ b/F6-resume-02-2016/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="ha-header-bottom">
           <nav>
-            <a href="#home">Home</a>
+            <a class="active" href="#home">Home</a>
             <a href="#resume">Resume</a>
             <a href="#skills">Skills</a>
             <a href="#education">Education</a>
@@ -54,13 +54,19 @@
     </section>
 
     <section class="row resume ha-waypoint" id="resume" data-animate-down="ha-header-rotate" data-animate-up="ha-header-small">
+      <div class="columns small-12 objective">
+        <h3>Professional Objective</h3>
+        <p>Taking care of the smallest details - methodically - is essential for projects to be delivered on time and with the highest standards. I would personally not have it any other way after seeing the difference it makes.</p>
+      </div>
+
       <div class="small-12 columns">
         <h3>Work History</h3>
       </div>
+      
       <div class="columns align-self-middle small-12 medium-7 large-8">
         <article class="row column small-uncollapse medium-collapse">
           <div class="columns small-12">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore est provident asperiores eligendi nesciunt, atque reiciendis magni repudiandae numquam modi eos explicabo eaque doloremque, fugit dolores officia. Voluptatibus ullam, iure?</p>
+            
           </div>
         </article>
       </div>
@@ -73,9 +79,29 @@
     <section class="row skills" id="skills">
       <div class="columns small-12">
         <h3>What I am good at</h3>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, odit dolore dolorem officiis obcaecati molestiae quasi magnam neque natus, similique magni nam. Magnam soluta nostrum porro eligendi assumenda, molestias officia.</div>
-      <div>Quia, sint iste iusto accusantium vitae doloribus suscipit molestiae corrupti, quis explicabo nihil ad alias corporis tempore reprehenderit. Dolorem alias, tempore incidunt quisquam architecto, earum unde repellat distinctio nulla cum!</div>
-      <div>Laboriosam corrupti, accusamus at nisi odio! Quod pariatur facilis nesciunt aliquid quisquam ratione, quasi eum ut iste repellat at magnam qui, dignissimos delectus expedita! Iure earum, ipsa dolorum illo. Id.</div>
+     </div>
+     <article class="row column">
+       <div class="columns small-12 medium-6">
+        <ul>
+          <li>Over 14 years of management experience.</li>
+          <li>User Experience focused professional.</li>
+          <li>HTML, CSS, SASS, js, jQuery &amp; ATG UI web developer with more than 10 years of experience.</li>
+          <li>Proficient in responsive web design.</li>
+          <li>E-commerce expert. ADA &amp; SEO professional knowledge.</li>
+          <li>Junior iOS developer.</li>
+        </ul>
+       </div>
+       <div class="columns small-12 medium-6">
+        <ul>
+          <li>Certified Six Sigma Green Belt.</li>
+          <li>Expert in wireframing &amp; prototyping.</li>
+          <li></li>
+          <li></li>
+          <li>Proficient using SVN &amp; Git tools.</li>
+          <li>Fluent in English.</li>
+        </ul>
+       </div>
+     </article>
     </section>
   
     <section class="row education" id="education">
