--- a/F6-resume-02-2016/index.html
+++ b/F6-resume-02-2016/index.html
@@ -229,6 +229,17 @@
       <a href="#0" class="cd-top">Top</a>
     </footer>
 
+    <svg class="defs-only">
+      <filter id="monochrome" color-interpolation-filters="sRGB"
+        x="0" y="0" height="100%" width="100%">
+          <feColorMatrix type="matrix"
+            values="0.36 0 0 0  0.02 
+                    0.44 0 0 0  0.06  
+                    0.40 0 0 0  0.16 
+                      0  0 0 1  0" />
+      </filter>
+    </svg>
+
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/what-input/what-input.min.js"></script>
     <script src="bower_components/foundation-sites/dist/foundation.min.js"></script>
