--- a/F6-resume-02-2016/index.html
+++ b/F6-resume-02-2016/index.html
@@ -95,8 +95,8 @@
         <ul>
           <li>Certified Six Sigma Green Belt.</li>
           <li>Expert in wireframing &amp; prototyping.</li>
-          <li></li>
-          <li></li>
+          <li>Multi-disciplinary teams leadership and management.</li>
+          <li>Expert in forecasting and project management.</li>
           <li>Proficient using SVN &amp; Git tools.</li>
           <li>Fluent in English.</li>
         </ul>
@@ -108,11 +108,11 @@
       <div class="columns small-12">
         <h3>Academic Background</h3>
       </div>
-      <article class="row column small-12 align-middle">
-        <div class="columns small-4 medium-5">
-          <img alt="Instituto Universitario de la Empresa" title="Instituto Universitario de la Empresa" data-interchange="[img/iude.png, small], [img/iude.png, medium], [img/iude.png, large], [img/uniovi@2x.png, retina]">
+      <article class="row column small-12 medium-6">
+        <div class="columns small-12 logo">
+          <img alt="Instituto Universitario de la Empresa" src="img/uniovi.png">
         </div>
-        <div class="columns small-8 medium-7">
+        <div class="columns small-12">
           <h4>Master in Business Administration</h4>
           <p>Instituto de la Empresa de la Universidad de Oviedo.</p>
           <p>Asturias. Spain.</p>
@@ -121,11 +121,11 @@
           <p class="strong">Summa Cum Laude</p>
         </div>
       </article>
-      <article class="row column small-12 align-middle">
-        <div class="columns small-4 medium-5">
+      <article class="row column small-12 medium-6 align-top">
+        <div class="columns small-12 logo">
           <img src="img/itesm.png" alt="Instituto Tecnologico y de Estudios Superiores de Monterrey" title="Instituto Tecnologico y de Estudios Superiores de Monterrey">
         </div>
-        <div class="columns small-8 medium-7">
+        <div class="columns small-12">
           <h4>Bachelor of Engineering</h4>
           <p>ITESM CEM</p>
           <p>Mexico City</p>
