--- a/F6-resume-02-2016/index.html
+++ b/F6-resume-02-2016/index.html
@@ -70,10 +70,10 @@
           </div>
         </article>
       </div>
-      <div class="columns align-self-middle medium-5 large-4 linkedin">
+      <!--<div class="columns align-self-middle medium-5 large-4 linkedin">
         <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
         <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/mikerai" data-format="inline" data-related="false" data-width="300"></script>
-      </div>
+      </div>-->
     </section>
 
     <section class="row skills" id="skills">
@@ -133,7 +133,20 @@
           <p>Mechanical and Electrical Engineering.</p>
         </div>
       </article>
-    </section> 
+    </section>
+
+    <div class="homepage-hero-module">
+    <div class="video-container">
+        <div class="filter"></div>
+        <video autoplay loop class="fillWidth">
+            <source src="http://172.25.43.79:5757/videos/Productive-Morning.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
+            <source src="http://172.25.43.79:5757/videos/Productive-Morning.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
+        </video>
+        <div class="poster hidden">
+            <img src="videos/Productive-Morning.jpg" alt="Productive morning">
+        </div>
+    </div>
+</div> 
 
     <section class="row tools" id="tools">
       <div class="small-12 columns">
@@ -233,17 +246,17 @@
       <filter id="monochrome" color-interpolation-filters="sRGB"
         x="0" y="0" height="100%" width="100%">
           <feColorMatrix type="matrix"
-            values="0.36 0 0 0  0.02 
-                    0.44 0 0 0  0.06  
-                    0.40 0 0 0  0.16 
-                      0  0 0 1  0" />
+            values="0.56 0   0   0  0 
+                    0   0.66 0   0  0  
+                    0   0   0.61 0  0 
+                    0   0   0    1  0" />
       </filter>
     </svg>
 
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/what-input/what-input.min.js"></script>
     <script src="bower_components/foundation-sites/dist/foundation.min.js"></script>
-    <script src="bower_components/foundation-sites/js/foundation.util.mediaQuery.js"></script>
+    <!--<script src="bower_components/foundation-sites/js/foundation.util.mediaQuery.js"></script>-->
     <script src="js/app.js"></script>
     <script src="js/header.js"></script>
     <script>
