Changes and fixed for Safari

--- a/F6-resume-02-2016/index.html
+++ b/F6-resume-02-2016/index.html
@@ -80,7 +80,7 @@
       <div class="columns small-12">
         <h3>What I am good at</h3>
      </div>
-     <article class="row column">
+     <article class="row">
        <div class="columns small-12 medium-6">
         <ul>
           <li>Over 14 years of management experience.</li>
@@ -239,7 +239,6 @@
       <div class="columns small 12 cr">
         <p>Copyright&copy; <script>document.write(new Date().getFullYear())</script>. mikerai.</p>
       </div>
-      <a href="#0" class="cd-top">Top</a>
     </footer>
 
     <svg class="defs-only">
@@ -256,7 +255,7 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/what-input/what-input.min.js"></script>
     <script src="bower_components/foundation-sites/dist/foundation.min.js"></script>
-    <!--<script src="bower_components/foundation-sites/js/foundation.util.mediaQuery.js"></script>-->
+    <script src="bower_components/foundation-sites/js/foundation.util.mediaQuery.js"></script>
     <script src="js/app.js"></script>
     <script src="js/header.js"></script>
     <script>
