--- a/F6-resume-02-2016/index.html
+++ b/F6-resume-02-2016/index.html
@@ -135,24 +135,25 @@
       </article>
     </section>
 
-    <div class="homepage-hero-module">
-    <div class="video-container">
-        <div class="filter"></div>
-        <video autoplay loop class="fillWidth">
-            <source src="http://172.25.43.79:5757/videos/Productive-Morning.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
-            <source src="http://172.25.43.79:5757/videos/Productive-Morning.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
-        </video>
-        <div class="poster hidden">
-            <img src="videos/Productive-Morning.jpg" alt="Productive morning">
-        </div>
-    </div>
-</div> 
+    <section class="homepage-hero-module">
+      <div class="video-container">
+        <h3>This is what I have done</h3>
+          <div class="filter"></div>
+          <video autoplay loop class="fillWidth">
+              <source src="videos/Productive-Morning.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
+              <source src="videos/Productive-Morning.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
+          </video>
+          <div class="poster hidden">
+              <img src="videos/Productive-Morning.jpg" alt="Productive morning">
+          </div>
+      </div>
+    </section> 
 
-    <section class="row tools" id="tools">
+    <!--<section class="row tools" id="tools">
       <div class="small-12 columns">
         <img src="img/design.jpg" alt="Hero banner">
       </div>
-    </section>
+    </section>-->
 
     <section class="row portfolio" id="portfolio">
       <div class="column align-self-middle small-12">
@@ -210,22 +211,22 @@
       </div>     
     </section>
 
-    <footer class="footer row expanded align-middle">
+    <footer class="footer row expanded">
       <div class="columns small-12 show-for-small-only back-to-top">
         <a href="#">
           <img alt="back to top" src="/img/cd-top-arrow.svg" />    
         </a>
         <span>Back to top</span>
       </div>
-      <div class="columns small-12 medium-4">
+      <div class="columns small-12 medium-4 align-self-middle">
         
       </div>
-      <div class="columns small-12 medium-4 text-center">
+      <div class="columns small-12 medium-4 text-center align-self-middle">
         <h4 class="pb15">You can follow me on twitter</h4>
         <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/mikerai_UX" data-widget-id="534906066828419073">Tweets by @mikerai_UX</a>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
       </div>
-      <div class="columns small-12 medium-4">
+      <div class="columns small-12 medium-4 align-self-middle">
         <ul>
           <li class="q-links">Quick Links</li>
           <li><a href="#home">Home</a></li>
